@@ -183,7 +183,7 @@ public class XMLSerializer implements Serializer {
 				
 		
 		//bsbm:vendor
-		result.append(leafTag(4, "vendor", new Integer(offer.getVendor()).toString()));
+		result.append(leafTag(4, "vendor", Integer.valueOf(offer.getVendor()).toString()));
 		
 		//bsbm:price
 		result.append(leafTag(4, "price", offer.getPriceString()));
@@ -207,7 +207,7 @@ public class XMLSerializer implements Serializer {
 		result.append(leafTag(4, "offerWebpage", offer.getOfferWebpage()));
 		
 		//dc:publisher
-		result.append(leafTag(4, "publisher", new Integer(offer.getVendor()).toString()));
+		result.append(leafTag(4, "publisher", Integer.valueOf(offer.getVendor()).toString()));
 		
 		//dc:date
 		GregorianCalendar date = new GregorianCalendar();
